# proyecto-los-de-atras

./: .gitignore  BLOCKCHAIN.h  Block.h  BlockChain.h  Blockchain.h  CMakeLists.txt  ForwardList.h  README.md  SHA256.h  block.h  blockchain.h  cascade.txt  csv.cpp  data.csv  double_list.h  hash_functions.h  input.csv  list.h  main.cpp  mine.txt  node.h  nodes.h  output.txt  tester.h  transaction.h
Base/: BlockChain.h  Blockchain.h  block.h  transaction.h
Class/: BPlusTree.h  DoubleList.h  Heap.h  nodes.h
Functions/: BoyerMoore.h  stoli.h  utd.h
Test/: test.h
Utils/: stoli.h  swap.h  unix.h
base/: Blockchain.h  block.h  transaction.h
class/: BPlusTree.h  DoubleList.h  Hash.h  HashMap.h  Heap.h  nodes.h
class/Final/: BlockChain.h  block.h  transaction.h
class/Partial/: BlockChain.h  block.h
classes/: BPlusTree.h  DoubleList.h  Hash.h  Heap.h  block.h  blockchain.h  bplustree.h  double_list.h  hash_table.h  hashtable.h  list.h  nodes.h  transaction.h
function/: BoyerMoore.h  StringToLong.h  UnixToDate.h  hashFunctions.h  stringToLong.h  unixToDate.h
functions/: hash_functions.h  stoli.h  unixtodate.h
other/: MOCK_DATA_DEMO2.csv  notes.txt  readTx.cpp  readUs.cpp  read_csv.cpp
others/: notes.txt  read_csv.cpp
test/: notes.txt  test.h
tests/: test.h
ui/: Gui.cpp  Gui.h  button.h  gui.h  input.h  password.h  word.h
utility/: stoli.h  unix.h
utils/: stoli.h  swap.h  unix.h
